<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient_4"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:background="@color/white"
        android:elevation="15dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/medpalogo" />

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/surface"
            android:elevation="15dp"
            android:src="@drawable/curve_right" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:elevation="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLetSignYouIn"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/lets_sign_you_in"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="3dp"
                android:text="@string/welcome_back_you_ve_been_missed"
                android:textColor="#D8D9CF"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:hint="Email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="31dp"
                android:text="@string/forgot_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoginMain"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="120dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#EAEAEA" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="OR?"
                    android:textStyle="bold" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:background="#EAEAEA" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="110dp"
                    android:src="@drawable/ic_logo_google" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#EAEAEA" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:text="LOGIN WITH OTP?"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>